added stuff to the bottom still need to move it over

--- a/interns.html
+++ b/interns.html
@@ -218,6 +218,9 @@
     <div class="container-f">
         <div class="row">
             <img src="images/Tiny-Horse-logo-White-300x138.png" class="col-4" alt="tinyhoselogo" />
+            <div>
+                
+            </div>
             <div class="col-4">
                 <p class="movemeright">
                     6121 SUNSET BLVD
@@ -228,7 +231,17 @@
                     <br>
                     INFO@TINYHORSE.COM
                 </p>
-                
+            </div>
+            <div class="col-4">
+                <p class="movemeright">
+                    LOS ANGELES
+                    <br>
+                    <br>
+                    CHARLOTTE
+                    <br>
+                    <br>
+                    NEW YORK
+                </p>
             </div>
         </div>
     </div>
